2016-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\definefontsetatsize): New macro to reduce 
	repetition in \textfonts, \titlefonts etc.
	(\reducedrm): Comment changed.

2016-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\ifrmisbold): Define with \newif.
	(\switchtolsize, \switchtolllsize): Define for each font size.  
	If \ifrmisbold is true, override \rmfont with \bffont.  This 
	guarantees that the roman font will be overridden, instead of 
	having to call \rmisbold everywhere large font sizes are used.
	It also ensures that superscripts are in bold for large font 
	sizes when style commands are nested.
	(\textfonts, \titlefonts, \chapfonts, \secfonts, \subsecfonts)
	(\reducedfonts and \smallfonts, \smallerfonts \textfonts)
	(\titlefonts, \chapfonts, \secfonts): Specify \rmisboldtrue or
	\rmisboldfalse.
	(\rmisbold): Remove macro, and replace with \rm everywhere it is 
	used.
	(\selectfonts): Use \switchtolllsize, \switchtolsize instead.

2016-09-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\assignfonts): New macro, in order to reduce
	duplicated code in \textfonts, \titlefonts, \chapfonts, 
	\secfonts, \subsecfonts, \reducedfonts and \smallfonts, 
	(\smallerfonts \textfonts, \titlefonts, \chapfonts, \secfonts)
	(\subsecfonts, \reducedfonts, \smallfonts, \smallerfonts):
	Use \assignfonts.
	(\ttslfont): Assign correctly (previous patch called it \ttfontsl
	by mistake).
	(\df): Refer to \ttslfont.

2016-09-17  Masamichi Hosoda  <trueroad@trueroad.jp>

	* doc/texinfo.tex
	(\latonechardefs, \latninechardefs)
	(\lattwochardefs, \unicodechardefs):
	Add missing braces for symbol insertion commands with no arguments.

2016-09-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex
	(\tenrm, \tenit, \tensl, \tenbf, \tentt, \tensf, \teni)
	(\tensy, \tenttsl):
	Rename as \rmfont, \itfont, \slfont, \bffont, \ttfont, \sffont,
	\ifont, \syfont and \ttslfont respectively, because these fonts 